[package]
name = "leaning-tower"
version = "0.1.0"
edition = "2021"
authors = ["Torstein Grindvik <torstein.grindvik@nordicsemi.no>"]
readme = "README.md"
description = "Exclusive use of services managed by an allocator, served over multiplexed transports"
repository = "https://github.com/torsteingrindvik/leaning-tower"

keywords = ["tokio", "tower", "asynchronous"]
categories = ["asynchronous"]

license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.53"
async-bincode = "0.6.1"
futures = "0.3.19"
futures-core = "0.3.19"
serde = { version = "1.0.136", features = [ "derive" ] }
slab = "0.4.5"
tokio = { version = "1.16.1", features = [ "full" ] }
tokio-tower = "0.6.0"
tower = { version = "0.4.11", features = [ "full" ] }
tracing = "0.1.29"

[dev-dependencies]
tracing-subscriber = "0.3.7"
examples-lib = { path = "examples-lib" }
rand = "0.8"
