[package]
name = "examples-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
futures = "0.3.19"
futures-core = "0.3.19"
pin-project-lite = "0.2.8"
serde = { version = "1.0.136", features = [ "derive" ] }
tokio = { version = "1.16.1", features = [ "full" ] }
tokio-tower = "0.6.0"
tokio-util = "0.6.9"
tower = { version = "0.4.11", features = [ "full" ] }
tracing = "0.1.29"
leaning-tower = { path = ".." }
