[package]
name = "examples-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
futures-core = "0.3"
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tower = "0.6"
tokio-util = "0.6"
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
leaning-tower = { path = ".." }
